--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/CoordinatorLayout"
     android:layout_width="wrap_content"
-    android:background="@color/purple_200"
+    android:background="@color/prime_black"
     android:layout_height="wrap_content">
 
     <com.google.android.material.appbar.AppBarLayout
