--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="prime_red">#E84545</color>
     <color name="prime_red_black">#903749</color>
     <color name="prime_reds">#53354A</color>
+    <color name="Grey">#334155</color>
 </resources>
