--- a/app/src/main/res/layout/fragment_match_list.xml
+++ b/app/src/main/res/layout/fragment_match_list.xml
@@ -32,7 +32,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:logo="@drawable/dota2"
+            app:logo="@drawable/dota_2_icons"
             app:menu="@menu/main_toolbar"
             app:navigationIcon="@android:drawable/ic_dialog_dialer"
             app:title="Dota2"
