--- a/app/src/main/res/layout/sing_dialog.xml
+++ b/app/src/main/res/layout/sing_dialog.xml
@@ -22,9 +22,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/inputs"
+        android:defaultFocusHighlightEnabled="false"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="text|textEmailAddress"
+        android:paddingStart="8dp"
         android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +38,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@drawable/inputs"
         android:ems="10"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
+        android:paddingStart="8dp"
+        android:selectAllOnFocus="false"
+        android:singleLine="false"
         android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextText"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,18 +55,23 @@
         android:id="@+id/btSignUpIn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button_reg"
         android:text="@string/sign_up_action"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editTextText"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/edSignPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edSignPassword"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btForgetPas"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_reg"
         android:text="@string/forget_password"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/editTextText"
