--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_news"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/feed"
         android:title="@string/title_news" />
     <item
         android:id="@+id/navigation_plays"
-        android:icon="@android:drawable/ic_dialog_dialer"
+        android:icon="@drawable/game"
         android:title="@string/title_plays" />
 
     <item
         android:id="@+id/navigation_tournaments"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/sword"
         android:title="@string/title_tournaments" />
 
     <item
         android:id="@+id/navigation_personal_account"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/account"
         android:title="@string/title_personal_account" />
 
 
