--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/CoordinatorLayout"
     android:layout_width="wrap_content"
-    android:background="@color/prime_black"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/GreyBackground">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
