--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -27,14 +27,14 @@
             android:id="@+id/homeMaterialToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/prime_black"
+            android:background="@color/PanelGrey"
             android:contextClickable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:logo="@drawable/dota_2_icons"
             app:menu="@menu/main_toolbar"
-            app:navigationIcon="@android:drawable/ic_dialog_dialer"
+            app:navigationIcon="@drawable/group_1358"
             app:title="Dota2"
             app:titleMarginStart="22dp"
             app:titleTextColor="@color/prime_red_black" />
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="58dp"
+            android:background="@color/GreyBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
