--- a/app/src/main/res/layout/fragment_personal_account.xml
+++ b/app/src/main/res/layout/fragment_personal_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#294A83"
+    android:background="@color/GreyBackground"
     tools:context=".ui.personalAccount.PersonalAccountFragment">
 
 
@@ -23,7 +23,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#294A83"
+        android:background="@color/GreyBackground"
         app:layout_constraintBottom_toTopOf="@+id/sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
