--- a/app/src/main/res/drawable/button_pressed_bg.xml
+++ b/app/src/main/res/drawable/button_pressed_bg.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:top="45dp">
         <shape android:shape="rectangle">
-            <solid android:color="#FF0000" />
+            <solid android:color="#E91E63" />
         </shape>
     </item>
 </layer-list>
